# Reactor

./: .env.example  .gitignore  .mailmap  CONTRIBUTORS.md  LICENSE  README.md  package-lock.json  package.json  setup_browser_automation.sh  setup_sqlite.sh  turbo.json
backend/: alembic.ini  pyproject.toml  requirements-minimal.txt  requirements.txt  test_integration.py  test_llm_integration.py  test_orchestration.py  test_sqlite.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py  mcp_server.py  types.py
backend/app/api/: routes.py
backend/app/api/v1/: analytics.py  auth.py  browser_screenshots.py  cost.py  execution.py  langgraph.py  llm_providers.py  mcp_servers.py  mcp_tools.py  message_stream.py  organizations.py  query.py  unified_browser.py  user.py  users.py
backend/app/core/: config.py  database.py  redis.py  simple_cache.py
backend/app/models/: __init__.py  analytics.py  conversation.py  cost.py  execution.py  mcp_server.py  mcp_tool.py  organization.py  user.py  user_api_key.py
backend/app/services/: api_key_manager.py  browser_automation_service.py  conversation_memory.py  cost_guardrail.py  direct_tool_service.py  enhanced_langgraph_workflow.py  execution_planner.py  llm_provider.py  llm_tool_execution.py  mcp_orchestration.py  message_streaming_service.py  observability.py  scheduler.py  self_evaluation.py  tavily_service.py  tavily_tool_executor.py  tavily_tools_registry.py  tool_indexer.py  unified_browser_service.py  website_navigation_service.py
frontend/: next.config.ts  package.json
frontend/src/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx
frontend/src/components/: MCPToolsPanel.tsx  SettingsPanel.tsx  SplitScreenLayout.tsx  StreamingChatInterface.tsx
infrastructure/: deploy.sh
infrastructure/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  prometheus.yml
infrastructure/kubernetes/: backend-deployment.yaml  configmap.yaml  database-deployment.yaml  frontend-deployment.yaml  ingress.yaml  monitoring-deployment.yaml  namespace.yaml  redis-deployment.yaml  weaviate-deployment.yaml
infrastructure/monitoring/: prometheus.yml
mcp-servers/: README.md  RUN_SERVERS.md  STARTUP_GUIDE.md  integration_test.py  shared_utils.py  simple_test.py  start_browser_automation.py  start_database_operations.py  start_web_intelligence.py  test_servers.py
mcp-servers/browser-automation/: main.py  requirements.txt
mcp-servers/database-operations/: main.py  requirements.txt
mcp-servers/web-intelligence/: main.py  requirements.txt
shared/: __init__.py  types.py
(+7 files in other folders)
